--- a/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
+++ b/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
@@ -36,6 +36,9 @@
 *.icalendar linguist-detectable=true
 *.icalendar linguist-documentation=false
 *.icalendar linguist-language=iCalendar
+*.ics linguist-detectable=true
+*.ics linguist-documentation=false
+*.ics linguist-language=iCalendar
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -171,7 +174,7 @@
 # File info
 
 # File type: gitattributes file (*.gitattributes)
-# File version: 5 (2024, Monday, December 2nd at 11:18 pm PST)
-# Line count (including blank lines and compiler line): 178
+# File version: 6 (2024, Tuesday, December 3rd at 07:25 pm PST)
+# Line count (including blank lines and compiler line): 181
 
 # End of script
